# Mator

./: CMakeLists.txt  README.md
include/Mator/: Mator.h
include/Mator/2Dim/: Vec2.h
include/Mator/3Dim/: Mat3.h  Vec3.h
include/Mator/4Dim/: Vec4.h
include/mator/2Dim/: Mat2.h  Vec2.h
include/mator/3Dim/: Mat3.h  Vec3.h
include/mator/4Dim/: Mat4.h  Vec4.h
source/: Mat2.cpp  Mat3.cpp  Mat4.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
src/: Mat2.cpp  Mat4.cpp  Vec2.cpp  Vec4.cpp
